# uptions

./: .env  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  lefthook.yml
.cargo/: config.toml
migration/src/: lib.rs  m20260609_000001_email_auth_and_sessions.rs  m20260707_000001_automations.rs  m20260709_000001_automation_alert_reads.rs  m20260709_000002_mcp_approval_requests.rs  m20260710_000001_automation_runs.rs  m20260710_000002_user_trading_provider.rs  m20260710_000003_trade_intents.rs  m20260713_000001_automation_idempotency_key.rs  m20260713_000002_usernames.rs  m20260713_000003_automation_observations.rs  m20260713_000004_wallet_signature_challenges.rs  m20260713_000005_trade_submission_hardening.rs  m20260713_000006_polymarket_private_beta_lifecycle.rs  m20260718_000001_market_comments.rs  m20260718_000002_market_favorites.rs  m20260718_000003_provider_architecture.rs
src/: error.rs  lib.rs  main.rs  venue.rs
src/analytics/: dto.rs  handlers.rs  service.rs
src/app/: docs.rs  mod.rs  rate_limit.rs  state.rs
src/auth/: dto.rs  handlers.rs  service.rs
src/automations/: dto.rs  executor.rs  handlers.rs  mod.rs  service.rs
src/config/: mod.rs
src/dtos/: auth_dto.rs  mod.rs
src/entities/: automation.rs  automation_alert.rs  automation_observation.rs  automation_run.rs  market_comment.rs  market_favorite.rs  mcp_approval_request.rs  mod.rs  polymarket_user_event.rs  trade_intent.rs  user.rs  user_session.rs  venue_connection.rs  wallet_signature_challenge.rs
src/error/: mod.rs
src/libs/: credentials.rs  mod.rs  resend_client.rs  (+1 more)
(+39 files in other folders)
